--- a/app/views/lis/6/you/email.html
+++ b/app/views/lis/6/you/email.html
@@ -13,31 +13,26 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Keeping your details safe
+    What is your email address?
   </h1>
-  <p>To help keep your details safe we can send you an access code to your mobile phone or landline everytime you need to access this service.</p>
-      
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
           <fieldset>
               <div class="form-group">
-                <label class="form-label-bold" for="email-address">
-                  Telephone number
-                  <span class="form-hint">This should be a phone you have access to when signing in</span>
-                </label>
               <input type="text" id="email-address" class="form-control">
             </div>
           </fieldset>
         </div>
         
-            {{
-              form_macros.button({
-                label: 'Next',
-                href: 'code'
-              })
-            }}
-    <p class="navigation"><a class="cancel" href="../lis-home">I can't do this right now</a></p>
+        {{
+          form_macros.button({
+            label: 'Next',
+            href: 'work'
+          })
+        }}
         
+        <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+
   </form>
     </div>
     </div>
