changed contact details

--- a/app/views/lis/6/exemption/hc3-entitlement.html
+++ b/app/views/lis/6/exemption/hc3-entitlement.html
@@ -23,35 +23,35 @@
       <div class="entitlement">
         <h4 class="heading-small">Sight tests</h4>
         <p class="description">Towards a private sight test, you pay a maximum of:</p>	
-        <p class="heading-medium">£5.10</p>
+        <p class="heading-medium">£x.xx</p>
         <a href="">How to use this certificate for sight tests</a>
       </div>
       
       <div class="entitlement">
         <h4 class="heading-small">Glasses or contact lenses</h4>
         <p class="description">Towards an optical voucher, you pay:</p>	
-        <p class="heading-medium">£10.20</p>
+        <p class="heading-medium">£x.xx</p>
         <a href="">How to use this certificate for glasses or contact lenses</a>
       </div>
       
       <div class="entitlement">
         <h4 class="heading-small">NHS dental treatment</h4>
         <p class="description">Per course of treatment, you pay a maximum of:</p>	
-        <p class="heading-medium">£15.30</p>
+        <p class="heading-medium">£x.xx</p>
         <a href="">How to use this certificate for dental treatment</a>
       </div>
       
       <div class="entitlement">
         <h4 class="heading-small">Travel to receive NHS treatment</h4>
         <p class="description">Towards travel, in a week you pay:</p>	
-        <p class="heading-medium">£5.10</p>
+        <p class="heading-medium">£x.xx</p>
         <a href="">How to use this certificate for travel</a>
       </div>
       
       <div class="entitlement">
         <h4 class="heading-small">NHS Wigs, or NHS fabric supports</h4>
         <p class="description">Per prescribed item you pay a maximum of:</p>	
-        <p class="heading-medium">£15.30</p>
+        <p class="heading-medium">£x.xx</p>
         <a href="">How to use this certificate for wigs or fabric supports</a>
       </div>
       
@@ -60,8 +60,8 @@
         <p class="description">Certificate number</p>
         <h2 class="heading-medium bignumbers">123 456 789</h2>
         <p class="valid">Valid dates</p>
-        <h2 class="heading-medium bignumbers"><span>from:</span> 14 July 2015</h2>
-        <h2 class="heading-medium bignumbers"><span>to:</span> 14 August 2016</h2> 
+        <h2 class="heading-medium bignumbers"><span>from:</span> 14 July 2010</h2>
+        <h2 class="heading-medium bignumbers"><span>to:</span> 14 August 2010</h2> 
       </div>
       
       <div class="panel panel-border-wide">
