--- a/app/views/lis/6/you/pension/credit-amount.html
+++ b/app/views/lis/6/you/pension/credit-amount.html
@@ -67,7 +67,7 @@
           })
         }}
         
-        <p class="navigation"><a class="cancel" href="../../../lis-home">Save and come back later</a></p>
+        <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
       
       </form>
     </div>
