--- a/app/views/lis/6/you/pension/private-pension-amount.html
+++ b/app/views/lis/6/you/pension/private-pension-amount.html
@@ -87,7 +87,7 @@
         label: 'Save and continue'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../../../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
