added routes to list of people in the home

--- a/app/views/lis/6/live/adapted.html
+++ b/app/views/lis/6/live/adapted.html
@@ -38,7 +38,7 @@
     
         {{
       form_macros.button({
-        href: 'others/people',
+        href: 'others/people-list',
         label: 'Save and continue'
       })
     }}
