--- a/app/views/lis/6/live/others/boarder-includes.html
+++ b/app/views/lis/6/live/others/boarder-includes.html
@@ -41,7 +41,7 @@
     {{
       form_macros.button({
         label: 'Save and continue',
-        href : 'people'
+        href : 'people-list'
       })  
     }}
           </div>
