--- a/app/views/lis/6/you/contact-prefs.html
+++ b/app/views/lis/6/you/contact-prefs.html
@@ -26,8 +26,8 @@
           </label>
         </div>
         <div class="form-group">
-          <input type="radio" id="landline" name="contact" value="landline">
-          <label class="form-control-radio minor-radio" for="landline">
+          <input type="radio" id="telephone" name="contact" value="telephone">
+          <label class="form-control-radio minor-radio" for="telephone">
             Telephone
           </label>
         </div>
