--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -2271,8 +2271,8 @@ tr.clickable-row {
       width: 80%; }
 
 @media print {
-  body {
-    font-family: sans-serif; } }
+  h1 {
+    font-family: sans-serif !important; } }
 
 #people-list {
   color: #667078; }
