--- a/app/views/lis/6/you/telephone.html
+++ b/app/views/lis/6/you/telephone.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    What is your email address?
+    What is your telephone number?
   </h1>
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
