updaed the hub page based on feedback

--- a/app/views/lis/6/lis-home-updated.html
+++ b/app/views/lis/6/lis-home-updated.html
@@ -14,23 +14,16 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">Low income scheme application</h1>
+        <h1 class="heading-large">Complete the following sections</h1>
+        <br>
         
-        <p class="lede">
-          Complete the following sections.
-        </p>
-    
-        <p>
-          If you need to leave the service your information will be saved.
-        </p>
-    
         <table class="data-table">
           <tr>
             <td>About you</td>
             <td><span id="about_you_status" class="notstarted-text">{{aboutYouStatus}}</span> <a href="you/registration">{{aboutYouLink}}</a></td>
           </tr>
           <tr>
-            <td>About your partner</td>
+            <td>Partner status</td>
             <td><span id="about_partner_status" class="notstarted-text">{{aboutPartnerStatus}}</span> <a href="partner/partner">{{aboutPartnerLink}}</a></td>
           </tr>
           <tr>
