--- a/app/views/lis/6/lis-home.html
+++ b/app/views/lis/6/lis-home.html
@@ -14,11 +14,8 @@
 
       <div class="text">
                   
-        <h1 class="heading-xlarge">Low income scheme application</h1>
-        
-        <p class="lede">
-          Complete the following sections.
-        </p>
+        <h1 class="heading-large">Complete the following sections</h1>
+        <br>
         <table class="data-table">
           <tr class='clickable-row' data-href='you/registration'>
             <td>About you</td>
