--- a/app/views/lis/6/save-continue/mem-word.html
+++ b/app/views/lis/6/save-continue/mem-word.html
@@ -14,7 +14,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Create a memorable word
+        Save your information
       </h1>
       
       <p>You can save your application and return to it at any time. You will need your reference number from the <a href="ref">previous page</a> and a memorable word.</p>
@@ -24,7 +24,7 @@
           <fieldset>
             <div class="form-group">
               <label class="form-label-bold" for="email-address">
-                Memorable word
+                Create a memorable word
               </label>
               <input type="text" id="email-address" class="form-control">
             </div>
