--- a/app/views/lis/6/save-continue/ref.html
+++ b/app/views/lis/6/save-continue/ref.html
@@ -17,7 +17,7 @@
       </h1>
       
       <div class="panel panel-border-wide claim-ref">
-        <p>You should keep this for your reference</p>
+        <p>You should make a note of this number, you will need it if you return to this service later.</p>
         <h1 class="heading-xlarge">1Q3 4T6 7K9</h1> 
       </div>
       
