--- a/app/views/lis/6/assets/money.html
+++ b/app/views/lis/6/assets/money.html
@@ -22,7 +22,7 @@
       <div class="form-group">
         <input type="checkbox" id="bank" name="banktype" value="bank">
         <label class="form-control-checkbox" for="bank">
-          Bank, building society or savings accounts
+          Bank accounts, building society accounts, savings accounts or ISA's
         </label>
       </div>
       <div class="form-group">
