--- a/app/views/sprint6.html
+++ b/app/views/sprint6.html
@@ -16,6 +16,8 @@
     <li><a href="/lis/6/live/others/people">Does anyone else live in your home?</a></li>
     <li><a href="/lis/6/part-help">Part help outcome</a></li>
     <li><a href="/lis/6/full-help">Full help outcome</a></li>
+    <li><a href="/lis/6/signin-continue">Returning after leaving</a></li>
+    <li><a href="/lis/6/signin">Returning after completing</a></li>
     <!--li><a href="/lis/6/register/user-id">Save and restore version A</a></li-->
   </ul>
 
