--- a/app/views/lis/6/start.html
+++ b/app/views/lis/6/start.html
@@ -55,7 +55,7 @@
           <a class="button button-get-started" href="ko" id="next">Start a new application</a>
         </p>
         
-        <a href="signin">I've used this service before - view my application</a>
+        <a href="signin-continue">I've used this service before - view my application</a>
          
       </div>
       
