fixed the issue with pensions

--- a/app/views/lis/6/live/mortgaged/mortgage-amount.html
+++ b/app/views/lis/6/live/mortgaged/mortgage-amount.html
@@ -55,7 +55,7 @@
     {{
       form_macros.amount_field({
         id: 'money-name',
-      label: 'How much do you pay? <span class="form-hint">Include any endowment premiums linked to the mortgage.<br>Dont include premiums for any other type of insurance or any arrears.</span>'
+      label: 'How much do you pay? <span class="form-hint">Include any endowment premiums linked to the mortgage.<br>Dont include premiums for any other type of insurance, any arrears, or any amount of mortgage that you are voluntarily overpaying</span>'
       })
     }}
       
