--- a/app/views/lis/6/need-to-know.html
+++ b/app/views/lis/6/need-to-know.html
@@ -13,11 +13,10 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    What you will need to apply
-  </h1>
-  
-  <p>You should have details of the following ready before you continue:</p>
+    You will need the following details to complete your application
 
+  </h1>
+      
   <ul class="list list-bullet">
     <li>income from work, pensions or benefits that you or your partner receive</li>
     <li>mortgages, rent or council tax you pay</li>
