--- a/app/views/lis/6/signin-continue.html
+++ b/app/views/lis/6/signin-continue.html
@@ -21,7 +21,7 @@
     {{
       form_macros.text_field({
         id: 'user',
-        label: 'Application referenece number'
+        label: 'Application reference number'
       })
     }}
     
