--- a/app/views/lis/6/exemption/hc2-entitlement.html
+++ b/app/views/lis/6/exemption/hc2-entitlement.html
@@ -37,7 +37,10 @@
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">Refund of necessary travel costs to receive NHS treatment</h4>
+        <h4 class="heading-small">
+          Help with the cost of travel to receive NHS treatment<br>
+          If you're referred by a doctor, dentist or optician
+        </h4>
         <a href="">How to use this certificate for travel</a>
       </div>
       
