--- a/app/views/lis/6/exemption/hc3-entitlement.html
+++ b/app/views/lis/6/exemption/hc3-entitlement.html
@@ -42,7 +42,10 @@
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">Travel to receive NHS treatment</h4>
+        <h4 class="heading-small">
+          Help with the cost of travel to receive NHS treatment<br>
+          If you're referred by a doctor, dentist or optician
+        </h4>
         <p class="description">Towards travel, in a week you pay:</p>	
         <p class="heading-medium">£x.xx</p>
         <a href="">How to use this certificate for travel</a>
