--- a/app/views/lis/6/partner/work.html
+++ b/app/views/lis/6/partner/work.html
@@ -41,7 +41,7 @@
         {{
           form_macros.button({
             label: 'Save and continue',
-            href: 'pension/pension'
+            href: 'education'
           })
         }}
 
