--- a/app/views/lis/6/savings.html
+++ b/app/views/lis/6/savings.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you or your partner have more than £16,000?
+    Do you or your partner have more than £16,000 in savings?
   </h1>
-  <p>Include savings, investments &amp; properties (but not place where you live)</p>  
+  <p>Include investments and properties (but not place where you live)</p>  
 
   <form action="savings-kickout-handler" method="get" class="form">
       <div class="form-item-wrapper">
