--- a/app/views/lis/6/you/email.html
+++ b/app/views/lis/6/you/email.html
@@ -11,27 +11,53 @@
     
   <div class="grid-row">
     <div class="column-two-thirds">
-
   <h1 class="heading-large">
-    What is your email address?
+    Would you like to use vinay.mattu@inter.net ?
   </h1>
-      <form action="" method="get" class="form">
-        <div class="form-item-wrapper">
+
+  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
+      
+  <form action="email-handler" method="get" class="form">
+    
+    <div class="form-item-wrapper">
           <fieldset>
+            <div class="inline-form-groups">
               <div class="form-group">
-              <input type="text" id="email-address" class="form-control">
+                <input type="radio" id="mobile" name="contact">
+                <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
+                  Yes, contact me on this email address
+                </label>
+              </div>
+              <div class="form-group">
+                <input type="radio" id="email" name="contact">
+                <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+                  No, contact me on a different email address
+                </label>
+              </div>
+            </div>
+
+            <div class="js-hidden panel-indent" id="contact-email-address">
+            {{
+              form_macros.text_field({
+                id: 'firstname',
+                label: 'Email address'
+              })
+            }}
             </div>
           </fieldset>
         </div>
-        
+
         {{
           form_macros.button({
             label: 'Save and continue',
-            href: 'work'
+            href: 'work' 
           })
         }}
-        
-        <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+    
+        <p class="navigation">
+          <a class="cancel" href="hc{{helplevel}}-entitlement">Cancel - back to my entitlement
+          </a>
+        </p>
 
   </form>
     </div>
