--- a/app/views/lis/6/live/living-summary.html
+++ b/app/views/lis/6/live/living-summary.html
@@ -19,6 +19,12 @@
     </h1>
 
     <table class="data-table living-summary">
+        <p><strong>About your home</strong></p>
+        <tr>
+        <td>Are you currently in hospital?</td>
+        <td>No</td>
+        <td><a href="home">Change this</a></td>
+      </tr>
       <tr>
         <td>Where do you live?</td>
         <td>In a property<br>I own</td>
@@ -34,35 +40,28 @@
         <td>1 Street, Place, County, NE1234 </td>
         <td><a href="address">Change this</a></td>
       </tr>
+      </table>
+      <table class="data-table living-summary">
+      <p><strong>Household bills</strong></p>
       <tr>
         <td>Do you have a mortgage or loan secured on your home?</td>
         <td>Yes</td>
         <td><a href="mortgaged/mortgage">Change this</a></td>
       </tr>
       <tr>
-        <td>How often do you pay your mortgage or secured loan?</td>
-        <td>Monthly</td>
+        <td>How much do you pay for your mortgage or secured loan?</td>
+        <td>£400 per month</td>
         <td><a href="mortgaged/mortgage-amount">Change this</a></td>
-      </tr>  
+      </tr>   
       <tr>
-        <td>Payment per month</td>
-        <td>£175</td>
-        <td><a href="mortgaged/mortgage-amount">Change this</a></td>
-      </tr>  
-      <tr>
-        <td>Do you pay for any of the following where you live?</td>
-        <td>No</td>
+        <td>Do you pay any of the following service charges where you live?</td>
+        <td>I do not pay for any of these things</td>
         <td><a href="services">Change this</a></td>
       </tr>  
       <tr>
         <td>Do you pay Council Tax?</td>
-        <td>Yes</td>
+        <td>Yes, monthly</td>
         <td><a href="council-tax">Change this</a></td>
-      </tr>
-      <tr>
-        <td>How often do you pay your council tax?</td>
-        <td>Monthly</td>
-        <td><a href="tax-amount">Change this</a></td>
       </tr>  
       <tr>
         <td>Do you pay ground rent?</td>
@@ -74,12 +73,19 @@
         <td>No</td>
         <td><a href="adapted">Change this</a></td>
       </tr>
+      </table>
+      
+       <table class="data-table living-summary">  
+           <p><strong>People living in your home</strong></p>
       <tr>
         <td>Does anyone else live in your home with you?</td>
         <td>Yes</td>
         <td><a href="people">Change this</a></td>
       </tr>
-      <tr>
+      </table>
+      <table class="data-table living-summary">
+          <p><strong>Thomas</strong></p>
+        <tr>
         <td>Name</td>
         <td>Thomas Smith</td>
         <td><a href="others/name">Change this</a></td>
@@ -89,52 +95,99 @@
         <td>2 June 1986</td>
         <td><a href="others/name">Change this</a></td>
       </tr>
-      <tr>
-        <td>Relationship to you</td>
-        <td>Son</td>
-        <td><a href="others/relationship">Change this</a></td>
+        <tr>
+        <td>Are they a boarder or lodger?</td>
+        <td>No</td>
+        <td><a href="others/name">Change this</a></td>
       </tr>
-      <tr>
+        <tr>
+        <td>Are they a full time student?</td>
+        <td>No</td>
+        <td><a href="others/name">Change this</a></td>
+      </tr>
+        <tr>
         <td>Do they have a job?</td>
         <td>Yes</td>
         <td><a href="others/work">Change this</a></td>
       </tr>
-      <tr>
-        <td>Do they work for 16 hours or more per week?</td>
+        <tr>
+        <td>On average do they work for 16 hours or more per week?</td>
         <td>Yes</td>
         <td><a href="others/hours">Change this</a></td>
       </tr>
-      <tr>
-        <td>How often do they get paid?</td>
-        <td>weekly</td>
-        <td><a href="others/amount">Change this</a></td>
-      </tr>
-      <tr>
+        <tr>
         <td>How much do they receive before tax and national insurance are taken off?</td>
-        <td>£200</td>
-        <td><a href="others/amount">Change this</a></td>
+        <td>£400 per week</td>
+        <td><a href="others/hours">Change this</a></td>
       </tr>
-      <tr>
-        <td>Are they in full time education?</td>
-        <td>No</td>
-        <td><a href="others/alevel">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Do they receive any of the following?</td>
+        <tr>
+        <td>Do they receive any of the following benefits?</td>
         <td>No</td>
         <td><a href="others/benefits">Change this</a></td>
       </tr>
-      <tr>
+         <tr>
         <td>Are they severely sight impaired or registered blind?</td>
         <td>No</td>
         <td><a href="others/blind">Change this</a></td>
       </tr>
+    
+        <tr>
+        <td>Does anyone else live in your home with you?</td>
+        <td>Yes</td>
+        <td><a href="others/people">Change this</a></td>
+      </tr>
+          <table class="data-table living-summary">
+          <p><strong>Bob</strong></p>
+        <tr>
+        <td>Name</td>
+        <td>Bob Smith</td>
+        <td><a href="others/name">Change this</a></td>
+      </tr>
       <tr>
+        <td>Date of birth</td>
+        <td>2 June 1986</td>
+        <td><a href="others/name">Change this</a></td>
+      </tr>
+        <tr>
+        <td>Are they a boarder or lodger?</td>
+        <td>No</td>
+        <td><a href="others/name">Change this</a></td>
+      </tr>
+        <tr>
+        <td>Are they a full time student?</td>
+        <td>No</td>
+        <td><a href="others/name">Change this</a></td>
+      </tr>
+        <tr>
+        <td>Do they have a job?</td>
+        <td>Yes</td>
+        <td><a href="others/work">Change this</a></td>
+      </tr>
+        <tr>
+        <td>On average do they work for 16 hours or more per week?</td>
+        <td>Yes</td>
+        <td><a href="others/hours">Change this</a></td>
+      </tr>
+        <tr>
+        <td>How much do they receive before tax and national insurance are taken off?</td>
+        <td>£400 per week</td>
+        <td><a href="others/hours">Change this</a></td>
+      </tr>
+        <tr>
+        <td>Do they receive any of the following benefits?</td>
+        <td>No</td>
+        <td><a href="others/benefits">Change this</a></td>
+      </tr>
+         <tr>
+        <td>Are they severely sight impaired or registered blind?</td>
+        <td>No</td>
+        <td><a href="others/blind">Change this</a></td>
+      </tr>
+        <tr>
         <td>Does anyone else live in your home with you?</td>
         <td>No</td>
         <td><a href="others/people">Change this</a></td>
       </tr>
-
     </table>
     
     <form action="live-done" method="get" class="form">
