fixed contact preferences

--- a/app/views/lis/6/you/email.html
+++ b/app/views/lis/6/you/email.html
@@ -49,8 +49,7 @@
 
         {{
           form_macros.button({
-            label: 'Save and continue',
-            href: 'work' 
+            label: 'Save and continue'
           })
         }}
     
