--- a/app/views/lis/6/exemption/hc3-entitlement-v2.html
+++ b/app/views/lis/6/exemption/hc3-entitlement-v2.html
@@ -11,15 +11,20 @@
     
     <div class="done-panel">
     <h2 class="heading-medium"><span id="done-tick"> </span>Application complete: view your entitlement below</h2>
-    <h4 class="heading-medium">Reference number: 1Q3 4T6 7K9</h4>
+        <p class="lede">Reference number: 1Q3 4T6 7K9</p>
   </div>
  
   <div class="grid-row">
-      
-      
     
     <div class="column-two-thirds">
-      <h1 class="heading-xlarge">Help with health costs<br></h1>
+
+        <div class="details">
+        <h1 class="heading-large">Help with health costs (HC3)</h1>
+        <p class="description">Certificate number</p>
+        <h2 class="heading-medium bignumbers">123 456 789</h2>
+        <p class="valid">Valid</p>
+        <h2 class="heading-medium bignumbers">14 July 2010 to 14 August 2010</h2> 
+      </div>
     
         <div class="entitlement">
         <h4 class="heading-small">Prescriptions</h4>
@@ -74,12 +79,6 @@
     <div class="column-third">
       
       <div class="right-col-details">
-      
-        <div>
-          <p class="description">HC3 Certificate for</p>
-          <h2 class="heading-medium bignumbers">Priya Mattu</h2>
-          <h2 class="heading-medium bignumbers">Vinay Mattu</h2>
-        </div>
       
         <div>
           <h3 class="heading-medium">Save a copy</h3>
