--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -10,70 +10,103 @@
 <main id="content" role="main">
     
   <div class="grid-row">
-    <div class="column-two-thirds">
+    <div style="min-width:580px">
 
   <div class="text">
 
     <h1 class="heading-large">
       Check your details
     </h1>
-
+<p><strong>Personal details</strong></p>
     <table class="data-table you-summary">
       <tr>
-        <td>Are you living permanently in a care home?</td>
-        <td>No</td>
-        <td><a href="care-home">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Are you currently in hospital?</td>
-        <td>No</td>
+        <td>Date of birth</td>
+        <td>11 July 1949</td>
         <td><a href="hospital">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you have a job?</td>
-        <td>{{mywork}}</td>
+        <td>National insurance number</td>
+        <td>JD 12 34 56 D</td>
         <td><a href="work">Change this</a></td>
       </tr>
       <tr>
-        <td>Are you in full time education?</td>
-        <td>No</td>
+        <td>How would you like us to contact you?</td>
+        <td>Email</td>
         <td><a href="education">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you receive a pension?</td>
-        <td>Yes</td>
+        <td>Email address</td>
+        <td>test@inter.net</td>
         <td><a href="pension/pension">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you receive pension credit?</td>
-        <td>No</td>
-        <td><a href="pension/pension-credit">Change this</a></td>
-      </tr>
-      <tr>
+          </table>
+      
+      <p><strong>Work and education</strong></p>
+          <table class="data-table you-summary">
+              <tr>
         <td>
-          Which pensions do you receive?
+          You you have a job?
         </td>
         <td>
-          Private pension
+        No
         </td>
         <td><a href="pension/pension-type">Change this</a></td>
       </tr>
       <tr>
-        <td>How much do you receive for your private pension?</td>
-        <td>£123 per week</td>
+        <td>
+          Are you in fulltime education?
+        </td>
+        <td>
+        No
+        </td>
+        <td><a href="pension/pension-type">Change this</a></td>
+      </tr>
+        </table>
+      
+      <p><strong>Pensions</strong></p>
+      <table class="data-table you-summary">   
+        <tr>
+        <td>Which type(s) of pension do you receive?</td>
+        <td>State,<br>Private</td>
+        <td><a href="pension/private-pension-amount">Change this</a></td>
+      </tr>
+        <tr>
+        <td>About your state pension</td>
+        <td>£141 per week</td>
+        <td><a href="pension/private-pension-amount">Change this</a></td>
+      </tr>
+         <tr>
+        <td>Do you receive Pension Credit Savings Credit?</td>
+        <td>Yes</td>
         <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
-        <td>Are you looking after someone but can’t get carers allowance because of another benefit?</td>
-        <td>No</td>
-        <td><a href="benefits/benefit4">Change this</a></td>
+        <td>About your Pension Credit Savings Credit payments?</td>
+        <td>£121 per week</td>
+        <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
-        <td>Does anyone receive carers allowance for looking after you?</td>
+          <tr>
+        <td>About your private pension</td>
+        <td>£321 per week</td>
+        <td><a href="pension/private-pension-amount">Change this</a></td>
+      </tr>
+      </table>
+      
+      <p><strong>Benefits and other money</strong></p>
+    <table class="data-table you-summary"> 
+      <tr>
+        <td>Are you looking after someone but can’t get carers allowance because of another benefit?</td>
         <td>No</td>
         <td><a href="benefits/benefit5">Change this</a></td>
       </tr>
       <tr>
+        <td>Does someone other than your partner get carers allowance for looking after you?</td>
+        <td>No</td>
+        <td><a href="benefits/other-money">Change this</a></td>
+      </tr>
+         <tr>
         <td>Do you receive any other money?</td>
         <td>No</td>
         <td><a href="benefits/other-money">Change this</a></td>
