--- a/app/views/lis/7/live/tax-amount.html
+++ b/app/views/lis/7/live/tax-amount.html
@@ -21,22 +21,28 @@
   <form action="" method="get" class="form">
 
     <div class="form-item-wrapper">
-      <div class="form-group">
+      <!--div class="form-group">
         <input type="radio" id="week" name="minor">
         <label class="form-control-radio js-toggle" for="week" data-hide="#tax-months">
           Every week
         </label>
-      </div>
-      <div class="form-group">
+      </div-->
+      <!--div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio js-toggle" for="fortnight" data-hide="#tax-months">
           Every two weeks
         </label>
-      </div>
-      <div class="form-group">
+      </div-->
+      <!--div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio js-toggle" for="fourweekly" data-hide="#tax-months">
          Every four weeks
+        </label>
+      </div-->
+      <div class="form-group">
+        <input type="radio" id="year" name="minor">
+        <label class="form-control-radio js-toggle" for="year" data-hide="#tax-months">
+          Annually
         </label>
       </div>
       <div class="form-group">
@@ -53,12 +59,6 @@
             })
           }}
         </div><br>
-      <div class="form-group">
-        <input type="radio" id="year" name="minor">
-        <label class="form-control-radio js-toggle" for="year" data-hide="#tax-months">
-          Annually
-        </label>
-      </div>
       
     {{
       form_macros.amount_field({
