updated content on b7

--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -603,3 +603,9 @@ tr.clickable-row { cursor: pointer; }
 #people-list {
   color :#667078;
 }
+
+.heading-group {
+  h1 {
+    margin-bottom: 0;
+  }
+}
