--- a/app/views/lis/7/need-to-know.html
+++ b/app/views/lis/7/need-to-know.html
@@ -13,8 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    You will need the following details to complete your application
-
+    You will need the following details to apply
   </h1>
       
   <ul class="list list-bullet">
