--- a/app/views/lis/7/save-continue/mem-word.html
+++ b/app/views/lis/7/save-continue/mem-word.html
@@ -17,7 +17,7 @@
         Save your information
       </h1>
       
-      <p>You can save your application and return to it at any time. You will need your reference number from the <a href="ref">previous page</a> and a memorable word.</p>
+      <p>You can save your application and return to it at any time. You will need your application number from the <a href="ref">previous page</a> and a memorable word.</p>
       
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
