--- a/app/views/lis/7/save-continue/phone.html
+++ b/app/views/lis/7/save-continue/phone.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Keeping your details safe
+     Protect your details
   </h1>
-  <p>To help keep your details safe we can send you an access code to your mobile phone or landline every time you need to access this service.</p>
+  <p>We will send you an access code to your mobile phone or landline every time you access this service.</p>
       
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
@@ -36,7 +36,7 @@
                 href: 'code'
               })
             }}
-    <p class="navigation"><a class="cancel" href="../lis-home">I can't do this right now</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">I don't have access to a telephone</a></p>
         
   </form>
     </div>
