--- a/app/views/lis/7/save-continue/ref.html
+++ b/app/views/lis/7/save-continue/ref.html
@@ -13,11 +13,12 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Your application number
+        Make a note of your application number
       </h1>
       
+      <p>You'll need this if you come back later.</p>
+
       <div class="panel panel-border-wide claim-ref">
-        <p>You should make a note of this number, you will need it if you return to this service later.</p>
         <h1 class="heading-xlarge">1Q3 4T6 7K9</h1> 
       </div>
       
@@ -25,7 +26,7 @@
 
         <details>
 
-          <summary><span class="summary">Email this to me</span></summary>
+          <summary><span class="summary">Email this number to me</span></summary>
 
           <div class="panel panel-border-narrow">
             <p>Enter your email address below if you would like your application number emailed to you.</p>
