--- a/app/views/lis/7/start.html
+++ b/app/views/lis/7/start.html
@@ -10,53 +10,58 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">Low Income Scheme</h1>
+        <div class="heading-group">
+          <h1 class="heading-xlarge">Apply for help with health costs</h1>
+          <h2 class="heading-large">The low income scheme</h2>
+        </div>
         
-        <p class="intro-to-list">
-          If you find it difficult to pay for health costs you may be entitled to some help towards the cost of:
-        </p>
-        
+        <p>You could get help towards:
+          
         <ul class="list list-bullet">
           <li>NHS Prescriptions;</li>
           <li>NHS Dental treatment;</li>
-          <li>NHS wigs and fabric supports;</li>
           <li>sight tests, glasses and contact lenses;</li>
-          <li>travel to receive NHS treatment if referred by a doctor (GP or hospital doctor), dentist or optician</li>
+          <li>NHS wigs and fabric supports;</li>
+          <li>travel to receive NHS treatment (when referred by a GP or hospital doctor, dentist or optician)</li>
         </ul>
-        
-        <p>You can apply at any time. Do not wait until you need treatment.</p>
 
-        <h3 class="heading-medium">You cannot get help with health costs if you or your partner (or both) have more than:</h3>
+        <p>If you have a low amount of money to live on after your housing costs and you or your partner (or both) have less than:</p>
         
         <ul class="list list-bullet">
           <li>£16,000 in savings, investments or properties (not counting the place where you live); or</li>
           <li>£23,250 in savings, investments or properties if you permanently live in a care home</li>
         </ul>
         
+        <p>You can apply at any time. Don't wait until you need treatment.</p>
 
-        <h3 class="heading-medium">You are already entitled to full help with health costs if you are:</h3>
+        <hr>
+        <p>
+          <a class="button button-get-started" href="ko" id="next">Start a new application</a>
+        </p>
+        <a href="signin-continue">I've used this service before - view my application</a>
+        <hr>
+        
+        <h3 class="heading-medium">You are already entitled to full help with health costs if you are getting:</h3>
             
         <ul class="list list-bullet">
-          <li>getting income support</li>
-          <li>getting pension credit guarantee credit</li>
-          <li>getting universal credit</li> 
-          <li>named on, or entitled to, an NHS Tax Credit Exemption certificate</li>
+          <li>income support;</li>
+          <li>pension credit guarantee credit;</li>
+          <li>universal credit; or</li> 
+          <li>you are named on, or entitled to, an NHS Tax Credit exemption certificate</li>
         </ul>
         
-        <p class="intro-to-list">You can claim for:</p>
+        <p>
+          <a href="" id="next">What to do if I'm entitled because of benefits</a>
+        </p>
+        
+        <h2 class="heading-medium">You can claim for:</h2>
               
         <ul class="list list-bullet">
           <li>yourself;</li>
           <li>your partner; or</li>
-          <li>your children;</li>
+          <li>your children</li>
         </ul>
-        
-        <p>
-          <a class="button button-get-started" href="ko" id="next">Start a new application</a>
-        </p>
-        
-        <a href="signin-continue">I've used this service before - view my application</a>
-         
+                 
       </div>
       
     </div>
