--- a/app/views/lis/7/you/benefits/mobility-component.html
+++ b/app/views/lis/7/you/benefits/mobility-component.html
@@ -23,13 +23,13 @@
         <div class="inline-form-groups">
           <div class="form-group">
             <input type="radio" id="yes" name="dla">
-            <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+            <label class="form-control-radio js-toggle" for="yes" data-show="#contact-email-address" data-hide="#contact-mobile-number">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="no" name="dla-mobility">
-            <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
+            <input type="radio" id="no" name="dla">
+            <label class="form-control-radio js-toggle" for="no" data-hide="#contact-email-address">
               No
             </label>
           </div>
